[tool.poetry]
name = "ont"
version = "0.1.0"
description = ""
authors = ["daniel"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^4.0.4"
pymongo = "^4.4.1"
geoip2 = "^4.7.0"
mypy = "^1.4.1"
types-requests = "^2.31.0.2"
django = "^4.2.4"
djangorestframework = "^3.14.0"
adrf = "^0.1.1"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
